ocb3: bump to edition 2024; msrv 1.85

--- a/ocb3/Cargo.toml
+++ b/ocb3/Cargo.toml
@@ -6,38 +6,37 @@ Pure Rust implementation of the Offset Codebook Mode v3 (OCB3) Authenticated Enc
 Associated Data (AEAD) Cipher as described in RFC7253
 """
 authors = ["RustCrypto Developers"]
-edition = "2021"
+edition = "2024"
 license = "Apache-2.0 OR MIT"
 readme = "README.md"
 documentation = "https://docs.rs/ocb3"
 repository = "https://github.com/RustCrypto/AEADs"
 keywords = ["aead", "encryption", "ocb"]
 categories = ["cryptography", "no-std"]
-rust-version = "1.81"
+rust-version = "1.85"
 
 [dependencies]
 aead = { version = "0.6.0-rc.0", default-features = false }
-cipher = "=0.5.0-pre.7"
+cipher = "=0.5.0-pre.8"
 ctr = "0.10.0-pre.2"
-dbl = "=0.4.0-rc.1"
+dbl = "0.4.0-rc.2"
 subtle = { version = "2", default-features = false }
+aead-stream = { version = "=0.6.0-pre", optional = true, default-features = false }
 zeroize = { version = "1", optional = true, default-features = false }
 
 [dev-dependencies]
 aead = { version = "0.6.0-rc.0", features = ["dev"], default-features = false }
-aes = { version = "=0.9.0-pre.2", default-features = false }
+aes = { version = "=0.9.0-pre.3", default-features = false }
 hex-literal = "0.4"
 
 [features]
-default = ["alloc", "getrandom"]
-std = ["aead/std", "alloc"]
-alloc = ["aead/alloc"]
+default = ["alloc", "os_rng"]
+alloc = ["aead/alloc", "aead-stream?/alloc"]
 arrayvec = ["aead/arrayvec"]
 bytes = ["aead/bytes"]
-getrandom = ["aead/getrandom", "rand_core"]
+os_rng = ["aead/os_rng", "rand_core"]
 heapless = ["aead/heapless"]
 rand_core = ["aead/rand_core"]
-stream = ["aead/stream"]
 
 [package.metadata.docs.rs]
 all-features = true
