--- a/xaes-256-gcm/Cargo.toml
+++ b/xaes-256-gcm/Cargo.toml
@@ -6,34 +6,33 @@ Pure Rust implementation of the XAES-256-GCM extended-nonce Authenticated
 Encryption with Associated Data (AEAD).
 """
 authors = ["RustCrypto Developers"]
-edition = "2021"
+edition = "2024"
 license = "Apache-2.0 OR MIT"
 readme = "README.md"
 documentation = "https://docs.rs/xaes-256-gcm"
 repository = "https://github.com/RustCrypto/AEADs"
 keywords = ["aead", "aes", "xaes", "encryption", "extended-nonce"]
 categories = ["cryptography", "no-std"]
-rust-version = "1.81"
+rust-version = "1.85"
 
 [dependencies]
 aead = { version = "0.6.0-rc.0", default-features = false }
-aes = "=0.9.0-pre.2"
+aes = "=0.9.0-pre.3"
 aes-gcm = { version = "=0.11.0-pre.2", default-features = false, features = ["aes"] }
-cipher = "=0.5.0-pre.7"
+cipher = "=0.5.0-pre.8"
+aead-stream = { version = "=0.6.0-pre", optional = true, default-features = false }
 
 [dev-dependencies]
 aead = { version = "0.6.0-rc.0", features = ["dev"], default-features = false }
 hex-literal = "0.4"
 
 [features]
-default = ["alloc", "getrandom"]
-std = ["aead/std", "aes-gcm/std", "cipher/std", "alloc"]
-alloc = ["aead/alloc", "aes-gcm/alloc"]
+default = ["alloc", "os_rng"]
+alloc = ["aead/alloc", "aead-stream?/alloc", "aes-gcm/alloc"]
 arrayvec = ["aead/arrayvec", "aes-gcm/arrayvec"]
-getrandom = ["aead/getrandom", "aes-gcm/getrandom", "rand_core"]
+os_rng = ["aead/os_rng", "aes-gcm/os_rng", "rand_core"]
 heapless = ["aead/heapless", "aes-gcm/heapless"]
 rand_core = ["aead/rand_core", "aes-gcm/rand_core"]
-stream = ["aead/stream", "aes-gcm/stream"]
 
 [package.metadata.docs.rs]
 all-features = true
