--- a/aes-gcm/Cargo.toml
+++ b/aes-gcm/Cargo.toml
@@ -26,7 +26,7 @@ subtle = { version = "2", default-features = false }
 zeroize = { version = "1", optional = true, default-features = false }
 
 [dev-dependencies]
-aead = { version = "0.6.0-rc.0", features = ["dev"], default-features = false }
+aead = { version = "0.6.0-rc.0", features = ["alloc", "dev"], default-features = false }
 hex-literal = "0.4"
 
 [features]
