--- a/ocb3/Cargo.toml
+++ b/ocb3/Cargo.toml
@@ -16,7 +16,7 @@ categories = ["cryptography", "no-std"]
 rust-version = "1.85"
 
 [dependencies]
-aead = { version = "0.6.0-rc.0", default-features = false }
+aead = { version = "0.6.0-rc.0", default-features = false, features = ["inout"] }
 cipher = "=0.5.0-pre.8"
 ctr = "0.10.0-pre.2"
 dbl = "0.4.0-rc.2"
