--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ members = [
     "aes-siv",
     #"ascon-aead128",
     #"belt-dwp",
-    #"ccm",
+    "ccm",
     #"chacha20poly1305",
     #"deoxys",
     #"eax",
