--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ members = [
     #"ascon-aead128",
     #"belt-dwp",
     "ccm",
-    #"chacha20poly1305",
+    "chacha20poly1305",
     #"deoxys",
     #"eax",
     "ocb3",
