--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ members = [
     "aes-siv",
     "ascon-aead",
     "ccm",
-    #"chacha20poly1305",
+    "chacha20poly1305",
     #"deoxys",
     #"eax",
     #"ocb3",
