--- a/deoxys/Cargo.toml
+++ b/deoxys/Cargo.toml
@@ -20,6 +20,7 @@ rust-version = "1.85"
 [dependencies]
 aead = { version = "0.6.0-rc.0", default-features = false }
 aes = { version = "=0.9.0-pre.3", features = ["hazmat"], default-features = false }
+inout = { version = "0.2.0-rc.4", default-features = false }
 subtle = { version = "2", default-features = false }
 zeroize = { version = "1", optional = true, default-features = false }
 
