--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,3 +31,6 @@ ghash = { git = "https://github.com/RustCrypto/universal-hashes.git" }
 pmac = { git = "https://github.com/RustCrypto/MACs.git" }
 
 belt-ctr = { git = "https://github.com/RustCrypto/block-modes.git" }
+
+# https://github.com/RustCrypto/utils/pull/1170
+inout = { git = "https://github.com/RustCrypto/utils.git" }
