--- a/ascon-aead/Cargo.toml
+++ b/ascon-aead/Cargo.toml
@@ -19,6 +19,7 @@ aead = { version = "0.6.0-rc.0", default-features = false }
 subtle = { version = "2", default-features = false }
 zeroize = { version = "1.6", optional = true, default-features = false, features = ["derive"] }
 ascon = "0.4"
+inout = { version = "0.2.0-rc.4", default-features = false }
 
 [dev-dependencies]
 hex-literal = "0.4"
