--- a/ascon-aead/Cargo.toml
+++ b/ascon-aead/Cargo.toml
@@ -23,7 +23,7 @@ inout = { version = "0.2.0-rc.4", default-features = false }
 
 [dev-dependencies]
 hex-literal = "0.4"
-aead = { version = "0.6.0-rc.0", features = ["alloc"] }
+aead = { version = "0.6.0-rc.0", features = ["alloc", "dev"] }
 
 [features]
 default = ["alloc", "os_rng"]
