--- a/aes-gcm/Cargo.toml
+++ b/aes-gcm/Cargo.toml
@@ -17,7 +17,7 @@ categories = ["cryptography", "no-std"]
 rust-version = "1.85"
 
 [dependencies]
-aead = { version = "0.6.0-rc.0", default-features = false, features = ["inout"] }
+aead = { version = "0.6.0-rc.0", default-features = false }
 aes = { version = "=0.9.0-pre.3", optional = true }
 cipher = "=0.5.0-pre.8"
 ctr = "0.10.0-pre.2"
