--- a/ascon-aead/Cargo.toml
+++ b/ascon-aead/Cargo.toml
@@ -15,7 +15,7 @@ categories = ["cryptography", "no-std"]
 rust-version = "1.85"
 
 [dependencies]
-aead = { version = "0.6.0-rc.0", default-features = false, features = ["inout"] }
+aead = { version = "0.6.0-rc.0", default-features = false }
 subtle = { version = "2", default-features = false }
 zeroize = { version = "1.6", optional = true, default-features = false, features = ["derive"] }
 ascon = "0.4"
