--- a/chacha20poly1305/Cargo.toml
+++ b/chacha20poly1305/Cargo.toml
@@ -20,7 +20,7 @@ categories = ["cryptography", "no-std"]
 rust-version = "1.85"
 
 [dependencies]
-aead = { version = "0.6.0-rc.0", default-features = false, features = ["inout"] }
+aead = { version = "0.6.0-rc.0", default-features = false }
 chacha20 = { version = "=0.10.0-pre.3", default-features = false, features = ["xchacha"] }
 cipher = "=0.5.0-pre.8"
 poly1305 = "0.9.0-rc.0"
