--- a/ascon-aead/Cargo.toml
+++ b/ascon-aead/Cargo.toml
@@ -21,8 +21,7 @@ zeroize = { version = "1.6", optional = true, default-features = false, features
 ascon = "0.4"
 
 [dev-dependencies]
-hex-literal = "0.4"
-aead = { version = "0.6.0-rc.0", features = ["alloc"] }
+aead = { version = "0.6.0-rc.0", features = ["dev"] }
 
 [features]
 default = ["alloc", "os_rng"]
