--- a/.github/workflows/belt-dwp.yml
+++ b/.github/workflows/belt-dwp.yml
@@ -4,7 +4,7 @@ on:
   pull_request:
     paths:
       - ".github/workflows/belt-dwp.yml"
-      - "aes-gcm/**"
+      - "belt-dwp/**"
       - "Cargo.*"
   push:
     branches: master
@@ -23,7 +23,7 @@ jobs:
     strategy:
       matrix:
         rust:
-          - 1.65.0 # MSRV
+          - 1.85.0 # MSRV
           - stable
         target:
           - armv7a-none-eabi
@@ -44,7 +44,7 @@ jobs:
         include:
           # 32-bit Linux
           - target: i686-unknown-linux-gnu
-            rust: 1.72.0 # MSRV
+            rust: 1.85.0 # MSRV
             deps: sudo apt update && sudo apt install gcc-multilib
           - target: i686-unknown-linux-gnu
             rust: stable
@@ -52,7 +52,7 @@ jobs:
 
           # 64-bit Linux
           - target: x86_64-unknown-linux-gnu
-            rust: 1.72.0 # MSRV
+            rust: 1.85.0 # MSRV
           - target: x86_64-unknown-linux-gnu
             rust: stable
     steps:
