--- a/belt-dwp/Cargo.toml
+++ b/belt-dwp/Cargo.toml
@@ -13,7 +13,7 @@ rust-version = "1.81"
 
 [dependencies]
 aead = { version = "0.6.0-rc.0", default-features = false }
-zeroize = { version = "1.7", default-features = false }
+zeroize = { version = "1.7", default-features = false, optional = true }
 universal-hash = { version = "0.6.0-rc.0" }
 opaque-debug = { version = "0.3" }
 
@@ -24,13 +24,15 @@ belt-ctr = { version = "0.2.0-pre" }
 hex-literal = "0.4"
 
 [features]
-default       = ["alloc", "getrandom"]
-std           = ["aead/std", "alloc"]
-alloc         = ["aead/alloc"]
-arrayvec      = ["aead/arrayvec"]
-getrandom     = ["aead/getrandom", "rand_core"]
-heapless      = ["aead/heapless"]
-rand_core     = ["aead/rand_core"]
+default = ["alloc", "os_rng"]
+alloc = ["aead/alloc"]
+arrayvec = ["aead/arrayvec"]
+bytes = ["aead/bytes"]
+os_rng = ["aead/os_rng", "rand_core"]
+heapless = ["aead/heapless"]
+rand_core = ["aead/rand_core"]
+reduced-round = []
+zeroize = ["dep:zeroize", "belt-ctr/zeroize"]
 
 [package.metadata.docs.rs]
 all-features = true
