--- a/belt-dwp/Cargo.toml
+++ b/belt-dwp/Cargo.toml
@@ -16,12 +16,13 @@ aead = { version = "0.6.0-rc.0", default-features = false }
 zeroize = { version = "1.7", default-features = false, optional = true }
 universal-hash = { version = "0.6.0-rc.0" }
 opaque-debug = { version = "0.3" }
+subtle = { version = "2", default-features = false }
 
 belt-block = { version = "0.2.0-pre.2" }
 belt-ctr = { version = "0.2.0-pre" }
 
 [dev-dependencies]
-hex-literal = "0.4"
+hex-literal = "1.0.0"
 
 [features]
 default = ["alloc", "os_rng"]
@@ -33,7 +34,3 @@ heapless = ["aead/heapless"]
 rand_core = ["aead/rand_core"]
 reduced-round = []
 zeroize = ["dep:zeroize", "belt-ctr/zeroize"]
-
-[package.metadata.docs.rs]
-all-features = true
-rustdoc-args = ["--cfg", "docsrs"]
