--- a/belt-dwp/Cargo.toml
+++ b/belt-dwp/Cargo.toml
@@ -22,7 +22,7 @@ belt-block = { version = "0.2.0-pre.2" }
 belt-ctr = { version = "0.2.0-pre" }
 
 [dev-dependencies]
-hex-literal = "1.0.0"
+hex-literal = "1"
 
 [features]
 default = ["alloc", "os_rng"]
@@ -34,3 +34,6 @@ heapless = ["aead/heapless"]
 rand_core = ["aead/rand_core"]
 reduced-round = []
 zeroize = ["dep:zeroize", "belt-ctr/zeroize"]
+
+[package.metadata.docs.rs]
+all-features = true
