Rename `ascon-aead` to `ascon-aead128` (#677)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ members = [
     "aes-gcm",
     "aes-gcm-siv",
     "aes-siv",
-    "ascon-aead",
+    "ascon-aead128",
     "belt-dwp",
     "ccm",
     "chacha20poly1305",
