--- a/aes-gcm-siv/Cargo.toml
+++ b/aes-gcm-siv/Cargo.toml
@@ -17,16 +17,16 @@ categories = ["cryptography", "no-std"]
 rust-version = "1.85"
 
 [dependencies]
-aead = { version = "0.6.0-rc.0", default-features = false }
-aes = { version = "=0.9.0-pre.3", optional = true }
-cipher = "=0.5.0-pre.8"
-ctr = "0.10.0-pre.2"
+aead = { version = "0.6.0-rc.1", default-features = false }
+aes = { version = "0.9.0-rc.0", optional = true }
+cipher = "0.5.0-rc.0"
+ctr = "0.10.0-rc.0"
 polyval = { version = "0.7.0-rc.0", default-features = false }
 subtle = { version = "2", default-features = false }
 zeroize = { version = "1", optional = true, default-features = false }
 
 [dev-dependencies]
-aead = { version = "0.6.0-rc.0", features = ["dev"], default-features = false }
+aead = { version = "0.6.0-rc.1", features = ["dev"], default-features = false }
 
 [features]
 default = ["aes", "alloc", "os_rng"]
