--- a/aes-siv/Cargo.toml
+++ b/aes-siv/Cargo.toml
@@ -17,22 +17,22 @@ categories = ["cryptography", "no-std"]
 rust-version = "1.85"
 
 [dependencies]
-aead = "0.6.0-rc.0"
-aes = "=0.9.0-pre.3"
-cipher = "=0.5.0-pre.8"
-cmac = "0.8.0-pre.2"
-ctr = "0.10.0-pre.2"
+aead = "0.6.0-rc.1"
+aes = "0.9.0-rc.0"
+cipher = "0.5.0-rc.0"
+cmac = "0.8.0-rc.0"
+ctr = "0.10.0-rc.0"
 dbl = "0.4.0-rc.1"
-digest = { version = "=0.11.0-pre.10", features = ["mac"] }
+digest = { version = "0.11.0-rc.0", features = ["mac"] }
 zeroize = { version = "1", optional = true, default-features = false }
 
 # optional dependencies
-pmac = { version = "0.8.0-pre.2", optional = true }
+pmac = { version = "0.8.0-rc.0", optional = true }
 
 [dev-dependencies]
 blobby = "0.3"
-hex-literal = "0.4"
-aead = { version = "0.6.0-rc.0", features = ["alloc", "dev"], default-features = false }
+hex-literal = "1"
+aead = { version = "0.6.0-rc.1", features = ["alloc", "dev"], default-features = false }
 
 [features]
 default = ["alloc", "os_rng"]
