--- a/belt-dwp/Cargo.toml
+++ b/belt-dwp/Cargo.toml
@@ -12,14 +12,14 @@ categories = ["cryptography", "no-std"]
 rust-version = "1.85"
 
 [dependencies]
-aead = { version = "0.6.0-rc.0", default-features = false }
+aead = { version = "0.6.0-rc.1", default-features = false }
 zeroize = { version = "1.7", default-features = false, optional = true }
 universal-hash = { version = "0.6.0-rc.0" }
 opaque-debug = { version = "0.3" }
 subtle = { version = "2", default-features = false }
 
-belt-block = { version = "0.2.0-pre.2" }
-belt-ctr = { version = "0.2.0-pre" }
+belt-block = { version = "0.2.0-rc.0" }
+belt-ctr = { version = "0.2.0-rc.0" }
 
 [dev-dependencies]
 hex-literal = "1"
