--- a/deoxys/Cargo.toml
+++ b/deoxys/Cargo.toml
@@ -18,13 +18,13 @@ edition = "2024"
 rust-version = "1.85"
 
 [dependencies]
-aead = { version = "0.6.0-rc.0", default-features = false }
-aes = { version = "=0.9.0-pre.3", features = ["hazmat"], default-features = false }
+aead = { version = "0.6.0-rc.1", default-features = false }
+aes = { version = "0.9.0-rc.0", features = ["hazmat"], default-features = false }
 subtle = { version = "2", default-features = false }
 zeroize = { version = "1", optional = true, default-features = false }
 
 [dev-dependencies]
-aead = { version = "0.6.0-rc.0", features = ["dev"], default-features = false }
+aead = { version = "0.6.0-rc.1", features = ["dev"], default-features = false }
 hex-literal = "0.4"
 
 [features]
