--- a/ocb3/Cargo.toml
+++ b/ocb3/Cargo.toml
@@ -16,17 +16,17 @@ categories = ["cryptography", "no-std"]
 rust-version = "1.85"
 
 [dependencies]
-aead = { version = "0.6.0-rc.0", default-features = false }
-cipher = "=0.5.0-pre.8"
-ctr = "0.10.0-pre.2"
+aead = { version = "0.6.0-rc.1", default-features = false }
+cipher = "0.5.0-rc.0"
+ctr = "0.10.0-rc.0"
 dbl = "0.4.0-rc.2"
 subtle = { version = "2", default-features = false }
 aead-stream = { version = "=0.6.0-pre", optional = true, default-features = false }
 zeroize = { version = "1", optional = true, default-features = false }
 
 [dev-dependencies]
-aead = { version = "0.6.0-rc.0", features = ["dev"], default-features = false }
-aes = { version = "=0.9.0-pre.3", default-features = false }
+aead = { version = "0.6.0-rc.1", features = ["dev"], default-features = false }
+aes = { version = "0.9.0-rc.0", default-features = false }
 hex-literal = "0.4"
 
 [features]
