--- a/aead-stream/Cargo.toml
+++ b/aead-stream/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "aead-stream"
-version = "0.6.0-pre"
+version = "0.6.0-rc.0"
 description = "Generic implementation of the STREAM online authenticated encryption construction"
 authors = ["RustCrypto Developers"]
 edition = "2024"
@@ -13,7 +13,7 @@ categories = ["cryptography", "no-std"]
 rust-version = "1.85"
 
 [dependencies]
-aead = { version = "=0.6.0-rc.0", default-features = false }
+aead = { version = "0.6.0-rc.1", default-features = false }
 
 [features]
 alloc = ["aead/alloc"]
