--- a/ccm/Cargo.toml
+++ b/ccm/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ccm"
-version = "0.5.0"
+version = "0.6.0-pre"
 description = "Generic implementation of the Counter with CBC-MAC (CCM) mode"
 authors = ["RustCrypto Developers"]
 edition = "2024"
@@ -14,15 +14,15 @@ keywords = ["encryption", "aead"]
 rust-version = "1.85"
 
 [dependencies]
-aead = { version = "0.6.0-rc.0", default-features = false }
-cipher = { version = "=0.5.0-pre.8", default-features = false }
-ctr = { version = "0.10.0-pre.2", default-features = false }
+aead = { version = "0.6.0-rc.1", default-features = false }
+cipher = { version = "0.5.0-rc.0", default-features = false }
+ctr = { version = "0.10.0-rc.0", default-features = false }
 subtle = { version = "2", default-features = false }
 
 [dev-dependencies]
-aead = { version = "0.6.0-rc.0", features = ["dev"], default-features = false }
-aes = { version = "=0.9.0-pre.3" }
-hex-literal = "0.4.1"
+aead = { version = "0.6.0-rc.1", features = ["dev"], default-features = false }
+aes = { version = "0.9.0-rc.0" }
+hex-literal = "1"
 
 [features]
 default = ["alloc", "os_rng"]
