--- a/chacha20poly1305/Cargo.toml
+++ b/chacha20poly1305/Cargo.toml
@@ -21,10 +21,14 @@ rust-version = "1.85"
 
 [dependencies]
 aead = { version = "0.6.0-rc.1", default-features = false }
-chacha20 = { version = "0.10.0-rc.0", default-features = false, features = ["xchacha"] }
+chacha20 = { version = "0.10.0-rc.0", default-features = false, features = [
+    "xchacha",
+    "legacy",
+] }
 cipher = "0.5.0-rc.0"
 poly1305 = "0.9.0-rc.1"
 zeroize = { version = "1.8", optional = true, default-features = false }
+subtle = { version = "2.6.1", default-features = false }
 
 [dev-dependencies]
 aead = { version = "0.6.0-rc.1", features = ["dev"], default-features = false }
