--- a/.github/workflows/benches.yml
+++ b/.github/workflows/benches.yml
@@ -17,6 +17,11 @@ env:
   CARGO_INCREMENTAL: 0
   RUSTFLAGS: "-Dwarnings"
 
+# Cancels CI jobs when new commits are pushed to a PR branch
+concurrency:
+  group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
+  cancel-in-progress: true
+
 jobs:
   build:
     if: false # benches are broken until https://github.com/RustCrypto/AEADs/pull/665 merges
