--- a/ocb3/Cargo.toml
+++ b/ocb3/Cargo.toml
@@ -19,7 +19,7 @@ rust-version = "1.85"
 aead = { version = "0.6.0-rc.1", default-features = false }
 cipher = "0.5.0-rc.0"
 ctr = "0.10.0-rc.0"
-dbl = "0.4.0-rc.2"
+dbl = "0.5.0-pre"
 subtle = { version = "2", default-features = false }
 aead-stream = { version = "0.6.0-rc.0", optional = true, default-features = false }
 zeroize = { version = "1", optional = true, default-features = false }
