--- a/xaes-256-gcm/Cargo.toml
+++ b/xaes-256-gcm/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "xaes-256-gcm"
-version = "0.0.1-pre.0"
+version = "0.1.0-rc.1"
 description = """
 Pure Rust implementation of the XAES-256-GCM extended-nonce Authenticated
 Encryption with Associated Data (AEAD).
@@ -18,9 +18,9 @@ rust-version = "1.85"
 [dependencies]
 aead = { version = "0.6.0-rc.1", default-features = false }
 aes = "0.9.0-rc.1"
-aes-gcm = { version = "0.11.0-rc.0", default-features = false, features = ["aes"] }
+aes-gcm = { version = "0.11.0-rc.1", default-features = false, features = ["aes"] }
 cipher = "0.5.0-rc.1"
-aead-stream = { version = "0.6.0-rc.0", optional = true, default-features = false }
+aead-stream = { version = "0.6.0-rc.1", optional = true, default-features = false }
 
 [dev-dependencies]
 aead = { version = "0.6.0-rc.1", features = ["dev"], default-features = false }
