--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,6 @@ members = [
 [patch.crates-io]
 aead-stream = { path = "aead-stream" }
 aes-gcm = { path = "aes-gcm" }
+
+# https://github.com/RustCrypto/utils/pull/1187
+blobby = { git = "https://github.com/RustCrypto/utils" }
