Cut rc.2 prereleases
Releases the following:
- `aead-stream` v0.6.0-rc.2
- `aes-gcm` v0.11.0-rc.2
- `aes-gcm-siv` v0.12.0-rc.2
- `aes-siv` v0.8.0-rc.2
- `ascon-aead128` v0.1.0-rc.2
- `belt-dwp` v0.1.0-rc.2
- `ccm` v0.6.0-rc.2
- `chacha20poly1305` v0.11.0-rc.2
- `deoxys` v0.2.0-rc.2
- `eax` v0.6.0-rc.2
- `ocb3` v0.2.0-rc.2
- `xaes-256-gcm` v0.1.0-rc.2

--- a/ascon-aead128/Cargo.toml
+++ b/ascon-aead128/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ascon-aead128"
-version = "0.1.0-pre"
+version = "0.1.0-rc.2"
 description = "Implementation of the Ascon-AEAD128 authenticated encryption scheme"
 authors = ["RustCrypto Developers"]
 edition = "2024"
