aes-gcm: support 32-bit and 64-bit tags under `hazmat` feature
Add 32-bit and 64-bit tag length support to AES-GCM.

Appendix C of NIST SP800-38D enforces a maxium decryption invocations on
a key when using short tag, while this crate currently does not track
the number of invocations. The crate users are responsible to follow the
NIST enforcement. Therefore, these two newly added tag lengths are gated
on the `hazmat` crate feature, and a warning message is added to the
document.

--- a/aes-gcm/Cargo.toml
+++ b/aes-gcm/Cargo.toml
@@ -38,6 +38,7 @@ alloc = ["aead/alloc"]
 arrayvec = ["aead/arrayvec"]
 bytes = ["aead/bytes"]
 getrandom = ["aead/getrandom"]
+hazmat = []
 rand_core = ["aead/rand_core"]
 
 [package.metadata.docs.rs]
