--- a/eax/Cargo.toml
+++ b/eax/Cargo.toml
@@ -21,7 +21,7 @@ rust-version = "1.85"
 
 [dependencies]
 aead = { version = "0.6.0-rc.10", default-features = false }
-cipher = "0.5.0-rc.8"
+cipher = "0.5"
 cmac = "0.8.0-rc.3"
 ctr = "0.10.0-rc.3"
 subtle = { version = "2", default-features = false }
