--- a/ocb3/Cargo.toml
+++ b/ocb3/Cargo.toml
@@ -17,7 +17,7 @@ rust-version = "1.85"
 
 [dependencies]
 aead = { version = "0.6.0-rc.10", default-features = false }
-cipher = "0.5.0-rc.8"
+cipher = "0.5"
 ctr = "0.10.0-rc.3"
 dbl = "0.5"
 subtle = { version = "2", default-features = false }
