--- a/xaes-256-gcm/Cargo.toml
+++ b/xaes-256-gcm/Cargo.toml
@@ -19,7 +19,7 @@ rust-version = "1.85"
 aead = { version = "0.6.0-rc.10", default-features = false }
 aes = "0.9.0-rc.4"
 aes-gcm = { version = "0.11.0-rc.3", default-features = false, features = ["aes"] }
-cipher = "0.5.0-rc.8"
+cipher = "0.5"
 aead-stream = { version = "0.6.0-rc.2", optional = true, default-features = false }
 
 [dev-dependencies]
